# xtypes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colcon.pkg  package.xml  xtypes.repos
.github/workflows/: ccpp.yml  ci.yml  nightly-ci.yml  reusable-github-ci.yml
cmake/: config.cmake.in
cmake/common/: eprosima_thirdparty_libraries.cmake
cmake/modules/: Findcpp-peglib.cmake
docs/: Doxyfile  standard-divergencies.md  types_inheritance.puml
examples/: complex_type.cpp  exceptions_asserts.cpp  iterators.cpp  load_idl.cpp  module.cpp
examples/resources/: example.idl
examples/resources/sub_modules/: example_aux.idl
grammar/: idl4-2.peg
include/xtypes/: AggregationType.hpp  AliasType.hpp  ArrayType.hpp  Assert.hpp  CollectionType.hpp  DynamicData.hpp  DynamicDataImpl.hpp  DynamicType.hpp  EnumeratedType.hpp  EnumerationType.hpp  Instanceable.hpp  MapInstance.hpp  MapType.hpp  Member.hpp  Module.hpp  MutableCollectionType.hpp  PairType.hpp  PrimitiveType.hpp  SequenceInstance.hpp  SequenceType.hpp  StringConversion.hpp  StringType.hpp  StructType.hpp  TypeConsistency.hpp  TypeKind.hpp  UnionType.hpp  idl.hpp  xtypes.hpp
include/xtypes/idl/: IDLGrammar.hpp  IDLParser.hpp  Module.hpp  Type.hpp  generator.hpp  generator_deptree.hpp  grammar.hpp  idl.hpp  parser.hpp
test/: add_source_listing.ps1  environment.ps1
test/WER/: CMakeLists.txt
test/unitary/: main.cpp  parser_test.cpp  utils.hpp
test/unitary/generator/: dependencies.cpp
test/unitary/parser/: module.cpp  parser_test.cpp  roundtrip.cpp
test/unitary/xtypes/: alias_type.cpp  collection_types.cpp  consistency.cpp  dynamicdata_operators.cpp  integration.cpp  iterators.cpp  main.cpp  module.cpp  no_memcheck_tests.cpp  primitive_types.cpp  string_conversion.cpp  struct_type.cpp  union_type.cpp
tools/: idl_validator.cpp
